// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NextLink snapshot external link with target _blank 1`] = `
<a
  href="https://example.com"
  onClick={[Function]}
  onMouseEnter={[Function]}
  rel="noopener noreferrer"
  target="_blank"
  title="Click me"
>
  Click me
</a>
`;

exports[`NextLink snapshot internal Link to a page 1`] = `
<a
  href="/page-two"
  onClick={[Function]}
  onMouseEnter={[Function]}
  rel={null}
  target={null}
  title="here comes the title"
>
  Click me
</a>
`;

exports[`NextLink snapshot internal Link to the homepage 1`] = `
<a
  href="/"
  onClick={[Function]}
  onMouseEnter={[Function]}
  rel={null}
  target={null}
  title="here comes the title"
>
  Click me
</a>
`;
